# catastro_mcp_server

./: CITATION.cff  README.md  main.py  pyproject.toml
src/mcpserver/: __main__.py  mcp_catastro.py
